@@ -1,3 +1,9 @@
+2009-03-25  Carlos Garcia Campos  <carlosgc@gsyc.es>
+
+	* pycvsanaly2/extensions/Metrics.py:
+
+	Ignore what git clone command sends to stderr.
+	
 2009-03-24  Carlos Garcia Campos  <carlosgc@gsyc.es>
 
 	* pycvsanaly2/extensions/file_types.py:
